# MetaShift

./: .dockerignore  .gitignore  Dockerfile  README.md  _crosscheck.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
server/: Dockerfile  app.py  environment.py  graders.py  models.py  playtest_engine.py  scenarios.json  tasks.py
